Added footer html with css

--- a/index.html
+++ b/index.html
@@ -151,6 +151,14 @@
    }
 
 
+   footer {
+    text-align: center;
+    background-color: #22282B;
+    color: rgb(212, 212, 212);
+  
+    }
+
+
     </style>
 
 </head>
@@ -213,6 +221,10 @@ If you want to connect with me, you can fill up the form below.
     </div>
     </div>
 
+
+    <footer>
+        <p>&copy; 2024 Sabarinath S | All Rights Reserved.</p>
+    </footer>
     
 
     <script>
