Added html and css code

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ If you want to connect with me, you can fill up the form below.
 
 
     <footer>
-        <p>&copy; 2024 Sabarinath S | All Rights Reserved.</p>
+        <p>&copy; 2024 Sabarinath S. | All Rights Reserved.</p>
     </footer>
     
 
